--- a/DevX-Project/package.json
+++ b/DevX-Project/package.json
@@ -15,6 +15,7 @@
     "@react-spring/web": "^9.7.5",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
+    "dompurify": "^3.2.3",
     "firebase": "^11.0.2",
     "mongodb": "^6.10.0",
     "react": "^18.3.1",
